--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "local-addon-plugins-themes",
   "productName": "Plugins And Themes Addon for Local by Flywheel",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "author": "Tyler Kemme",
   "contributors": [
     {
@@ -17,17 +17,20 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src -d lib",
-    "watch": "run-when-changed --watch 'src/*.js' --exec 'npm run-script build'"
+    "watch": "run-when-changed --watch 'src/*.js' --exec 'npm run-script build'",
+    "version": "auto-changelog --package; git add CHANGELOG.md"
   },
   "devDependencies": {
+    "auto-changelog": "^0.3.1",
     "babel": "^6.5.2",
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "run-when-changed": "^1.3.0"
+    "run-when-changed": "^1.3.0",
+    "auto-changelog": "*"
   },
   "engines": {
-	"local-by-flywheel": "^1.1.0"
+    "local-by-flywheel": "^1.1.0"
   }
 }
