--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "local-addon-plugins-themes",
   "productName": "Plugins And Themes Addon for Local by Flywheel",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "author": "Tyler Kemme",
   "contributors": [
     {
@@ -21,14 +21,13 @@
     "version": "auto-changelog --package; git add CHANGELOG.md"
   },
   "devDependencies": {
-    "auto-changelog": "^0.3.1",
+    "auto-changelog": "*",
     "babel": "^6.5.2",
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "run-when-changed": "^1.3.0",
-    "auto-changelog": "*"
+    "run-when-changed": "^1.3.0"
   },
   "engines": {
     "local-by-flywheel": "^1.1.0"
